# Konami_IV-SP

./: .gitignore  CMakeLists.txt  Dockerfile  Konami_iv_sp-0.0.1-Linux.deb  Konami_iv_sp-0.0.1-Linux.rpm  Makefile  README.md  client.sh
src/: message_queue.c  message_queue.h  schema.xsd  server.c  server.h  server_run.c
test/: invalid_command_echod.xml  ls_etc.xml  print.xml  xml_row_typo.xml
